# Berea_PNM

./: .gitignore  Berea700_r5_sigma35.vtp  LICENSE.md  Multiphase.ipynp  README.md  Snow_extraction.ipynp  absolute_permeability.ipynb  app.py  env.yml  environment.yml  multiphase.ipynb  percolation.ipynb  percolation.ipynp  pyproject.toml  requirements.txt  single_phase.ipynp  snow_extraction.ipynb
.ipynb_checkpoints/: snow_extraction-checkpoint.ipynb
