[project]
name = "berea-pnm"
version = "0.1.0"
description = "A project for analyzing and visualizing porous network models using various scientific libraries."
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "jupyterlab>=4.3.4",
    "matplotlib==3.5.1",
    "numpy==1.20.0",
    "openpnm==2.8.2",
    "pandas==1.3.5",
    "porespy==1.3.1",
    "scikit-image==0.18.0",
    "scipy==1.7.3",
    "streamlit==1.17.0",
]
